--- a/CreatElement.html
+++ b/CreatElement.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <input type="button" value="Clique aqui" id="botao">
-    <p></p>
-
-    <script src="botao.js"></script>
+    
+    <script src="createlement.js"></script>
+    
 </body>
 </html>
